# dart-risk-mcp

./: .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  opendart_api_guide.md  pyproject.toml  vercel.json
api/: [endpoint].js
dart_risk_mcp/: __init__.py  __main__.py  server.py  setup.py
docs/: index.html
examples/: README.md  dart_baseline_no_mcp.md  dart_integrated_report.md  dart_risk_v1_0_demo.md  dart_risk_v1_0_investor.md
extension/: .mcpbignore  manifest.json  pyproject.toml
extension/src/: server.py
relay/: README.md  worker.js
scripts/: audit_registry_names.py  backfill_exits.py  backfill_market_cls.py  backfill_renames.py  backfill_sightings.py  build_known_actors.py  build_network_html.py  dev_relay.py  diagnose_edges.py  diagnose_exits.py  discover_actors.py  export_tool_data.py  manage_aliases.py  merge_registry_dupes.py  merge_sightings_files.py  network_template.html  refresh_known_actors.py  regen_goldens.py  setup_known_actors_db.py
tests/: test_affiliate_investments.py  test_audit_opinion_history.py  test_backfill_sightings.py  test_beneish_variables.py  test_build_network_html.py  test_capital_churn.py  test_cb_extractor_structured.py  test_cfs_ofs_accrual.py  test_dart_client_capital_decisions.py  test_dart_client_issue_decisions.py  test_debt_balance.py  test_discover_actors.py  test_distress_dividend_v090.py  test_executive_roster.py  test_exit_extractor.py  test_export_tool_data.py  test_financial_anomaly.py  test_financial_indx_v088.py  test_find_actor_overlap.py  test_fold_variants.py  (+27 more)
(+212 files in other folders)
